Add stub api for getting OTP while doing registeration
